WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268381
[LBSE] Fix css3/masking crashes
https://bugs.webkit.org/show_bug.cgi?id=268381
Summary
[LBSE] Fix css3/masking crashes
Rob Buis
Reported
2024-01-30 07:48:07 PST
Fix css3/masking crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-01-30 07:51:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23514
EWS
Comment 2
2024-01-30 09:29:22 PST
Committed
273760@main
(3e861792fa61): <
https://commits.webkit.org/273760@main
> Reviewed commits have been landed. Closing PR #23514 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-30 09:30:16 PST
<
rdar://problem/121936663
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug