[LBSE] Fix css3/masking crashes https://bugs.webkit.org/show_bug.cgi?id=268381

Reviewed by Nikolas Zimmermann.

This code did not take into account non-SVG elements can use
SVG clippers, dix that.

* Source/WebCore/rendering/RenderLayerModelObject.cpp:
(WebCore::RenderLayerModelObject::svgClipperResourceFromStyle const):
(WebCore::RenderLayerModelObject::paintSVGClippingMask const):

Canonical link: https://commits.webkit.org/273760@main